<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.FeedbackActivity"
    android:orientation="vertical"
    android:layout_margin="16dp">

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/topic_feedback"
        android:gravity="center|start"
        android:paddingHorizontal="16dp"
        android:id="@+id/txtTopic"
        android:inputType="textEmailAddress"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:hint="@string/email_feedback"
        android:gravity="center|start"
        android:paddingHorizontal="16dp"
        android:inputType="textEmailAddress"
        android:id="@+id/txtEmail"/>

    <com.google.android.material.textfield.TextInputEditText
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:hint="@string/feedback"
        android:gravity="center|start"
        android:paddingHorizontal="16dp"
        android:id="@+id/txtFeedback"/>

    <Button
        android:id="@+id/btnSend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/send"
        android:layout_gravity="center"
        android:textColor="@color/black"/>

</LinearLayout>