<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="15dp"
    app:strokeWidth="2dp"
    app:strokeColor="@color/cool_pink"
    android:layout_margin="10dp">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/playlistImg"
        android:layout_width="170dp"
        android:layout_height="130dp"
        android:src="@drawable/splash_scrreen"
        app:shapeAppearanceOverlay="@style/curved"
        android:contentDescription="@string/song_img"/>

    <TextView
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:id="@+id/playlistName"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="130dp"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:text="@string/playlist_name"
        android:textColor="@color/black"
        android:contentDescription="@string/playlist_name"/>

    <ImageButton
        android:id="@+id/btnDeletePlaylist"
        android:contentDescription="@string/playlist_delete"
        android:backgroundTint="@android:color/transparent"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:src="@drawable/ic_delete"
        app:tint="@color/cool_pink"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="130dp"
        android:layout_marginStart="130dp"/>

</com.google.android.material.card.MaterialCardView>