<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlayerActivity"
    android:orientation="vertical"
    android:gravity="center">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btnBackPA"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/ic_back"
            android:layout_marginStart="5dp"
            app:tint="@color/black"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            android:padding="5dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/world_of_music"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/btnFavourites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_favourites_music"
            android:background="@android:color/transparent"
            android:layout_marginEnd="15dp"
            app:tint="@android:color/holo_red_dark"
            android:contentDescription="@string/favourites_btn"/>

    </LinearLayout>

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/splash_scrreen"
        app:shapeAppearanceOverlay="@style/curved"
        app:strokeColor="@color/cool_blue"
        app:strokeWidth="5dp"
        android:id="@+id/imageMusicPA"/>

    <TextView
        android:id="@+id/songNamePA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_weight="1"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:gravity="center"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnPrevious"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_previous"
            app:iconSize="40dp"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnPausePA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_pause"
            app:iconSize="50dp"
            android:layout_marginHorizontal="25dp"
            app:shapeAppearanceOverlay="@style/curved"
            android:backgroundTint="@android:color/holo_red_light"
            app:iconTint="@color/white"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:icon="@drawable/ic_skip_next"
            app:iconSize="40dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/seekBarStartPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="00:00"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights"/>

        <TextView
            android:id="@+id/seekBarEndPA"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="Loading.."
            android:gravity="center"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/btnRepeatPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_repeat"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:layout_weight="1"
            android:contentDescription="@string/repeat_btn"/>

        <ImageButton
            android:id="@+id/btnGraphicPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_graphic_eq"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:layout_weight="1"
            android:contentDescription="@string/graphic_btn"/>

        <ImageButton
            android:id="@+id/btnTimerPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_timer"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:layout_weight="1"
            android:contentDescription="@string/timer_btn"/>

        <ImageButton
            android:id="@+id/btnSharePA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_share"
            android:background="@android:color/transparent"
            app:tint="@color/cool_pink"
            android:layout_weight="1"
            android:contentDescription="@string/share_btn"/>

    </LinearLayout>

</LinearLayout>