<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.PlayListDetails">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/cool_pink"
        android:layout_marginTop="2dp">

        <ImageButton
            android:id="@+id/btnBackPD"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:src="@drawable/ic_back"
            android:contentDescription="@string/back_btn"
            app:tint="@color/white"
            android:padding="5dp"
            android:backgroundTint="@android:color/transparent"/>

        <TextView
            android:id="@+id/playlistNamePD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/playlist_btn"
            android:text="@string/playlist_btn"
            android:gravity="center"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:singleLine="true"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:id="@+id/linearLayoutDetails"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        android:layout_marginTop="10dp"
        android:background="@color/cool_pink">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="250dp"
            android:layout_height="match_parent"
            android:id="@+id/playlistImgPD"
            android:src="@drawable/splash_scrreen"/>

        <TextView
            android:id="@+id/moreInfoPD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/playlist_name"
            android:gravity="center|start"
            android:layout_marginHorizontal="5dp"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:scrollbarThumbVertical="@drawable/ic_scrooll_bar"
        android:scrollbars="vertical"
        android:paddingBottom="280dp"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/playlistDetailsRV"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayoutDetails"/>

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/btnShuffleBtnPD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        app:icon="@drawable/ic_shuffle"
        app:iconSize="35dp"
        app:iconTint="@color/cool_pink"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.9"
        app:strokeWidth="2dp"
        app:strokeColor="@color/cool_pink"
        android:visibility="invisible"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btnAddPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/shuffle_btn"
            android:drawableLeft="@drawable/ic_add"
            android:drawableTint="@color/cool_pink"
            android:text="@string/add_song"
            android:textAllCaps="false"
            android:textColor="@color/black" />

        <Button
            android:id="@+id/btnRemoveAllPD"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="@string/playlist_btn"
            android:drawableLeft="@drawable/ic_remove"
            android:drawableTint="@color/cool_pink"
            android:text="@string/remove_all"
            android:textAllCaps="false"
            android:textColor="@color/black" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>