<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".activities.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnShuffle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_shuffle"
                    android:contentDescription="@string/shuffle_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:text="@string/shuffle_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"/>

                <Button
                    android:id="@+id/btnFavourites"
                    android:text="@string/favourites_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_favorite"
                    android:contentDescription="@string/favourites_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

                <Button
                    android:id="@+id/btnPlaylists"
                    android:text="@string/playlist_btn"
                    android:textColor="@color/black"
                    android:textAllCaps="false"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableTop="@drawable/ic_playlist"
                    android:contentDescription="@string/playlist_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"/>

            </LinearLayout>

            <TextView
                android:id="@+id/txtTotalSongs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total_songs"
                android:layout_margin="10dp"
                android:textColor="@color/black"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/musicRV"
                android:scrollbars="vertical"
                android:scrollbarThumbVertical="@drawable/ic_scrooll_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <androidx.fragment.app.FragmentContainerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nowPlaying"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout="@layout/fragment_now"
            android:name="com.example.musicappkotlin.NowFragment"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/nav_menu"/>


</androidx.drawerlayout.widget.DrawerLayout>